--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>be.penance</groupId>
-    <artifactId>finalfantasy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <groupId>be.penance.finalfantasy</groupId>
+  <artifactId>parent</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <name>parent</name>
+  <packaging>pom</packaging>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.5.8.RELEASE</version>
+    <relativePath/>
+  </parent>
+
+  <modules>
+    <module>frontend</module>
+    <module>backend</module>
+  </modules>
 
 </project>
