--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,16 @@
     <relativePath/>
   </parent>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.8</java.version>
+    <commons-io.version>2.6</commons-io.version>
+    <commons-lang.version>3.7</commons-lang.version>
+    <full-artifact-name>target/${project.artifactId}-${project.version}.jar</full-artifact-name>
+    <heroku.maven.plugin>2.0.1</heroku.maven.plugin>
+    <heroku.appName>tobenamed</heroku.appName>
+  </properties>
+
   <modules>
     <module>frontend</module>
     <module>backend</module>
